finished building hero section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@700&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
     <title>Smart banking</title>
@@ -23,7 +23,7 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__list-item">
-            <a class="nav__link" href="#">About</a>
+            <a class="nav__link" href="#about">About</a>
           </li>
 
           <li class="nav__list-item">
@@ -72,6 +72,56 @@
           <i class="fa-solid fa-bag-shopping nav__icon"></i>
         </span>
       </nav>
+
+      <section id="about" class="section-hero">
+        <div class="section-hero__info">
+          <div class="section-hero__heading">
+            <h2 class="section-hero__title">
+              Banking <br />
+              <span class="text-wrapped">more</span> smart
+            </h2>
+
+            <p class="section-hero__description">
+              Meet the only spend management platform and corporate card.
+            </p>
+
+            <div class="section-hero__get-cards">
+              <!-- <span
+                class="icon-container icon-container--black icon-container--shadow"
+              > -->
+              <i
+                class="fa-solid fa-arrow-right icon icon--big icon--shadow"
+              ></i>
+              <!-- </span> -->
+
+              <p class="section-hero__get-cards-text">Get your cards</p>
+            </div>
+          </div>
+
+          <div class="section-hero__cards">
+            <div class="section-hero__cards-left">
+              <img
+                class="section-hero__visa"
+                src="/assets/visa.png"
+                alt="visa card"
+              />
+            </div>
+
+            <div class="section-hero__cards-right">
+              <div class="section-hero__cards-right-icons">
+                <i class="fa-solid fa-credit-card icon icon--white"></i>
+                <i class="fa-solid fa-circle-info icon icon--white"></i>
+                <i class="fa-solid fa-file-lines icon icon--white"></i>
+                <i class="fa-solid fa-hand-holding-hand icon"></i>
+                <i class="fa-solid fa-envelope icon"></i>
+                <i class="fa-solid fa-circle-question icon icon--white"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="section-hero__plans"></div>
+      </section>
     </header>
   </body>
 </html>
