--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A banking services website" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <script
       crossorigin="anonymous"
       src="https://kit.fontawesome.com/1fef759d34.js"
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@700&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Smart banking</title>
+    <title>Smart Banking - Landing page</title>
   </head>
   <body>
     <header class="header">
@@ -37,10 +37,10 @@
 
         <h1>
           <svg
-            width="83"
+            fill="none"
             height="15"
             viewBox="0 0 83 15"
-            fill="none"
+            width="83"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
@@ -99,9 +99,9 @@
           <div class="section-hero__cards">
             <div class="section-hero__cards-left">
               <img
+                alt="visa card"
                 class="section-hero__visa"
                 src="/assets/visa.png"
-                alt="visa card"
               />
             </div>
 
