modified inner and outer links

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           </li>
 
           <li class="nav__list-item">
-            <a class="nav__link" href="#">How it works</a>
+            <a class="nav__link" href="#feature">How it works</a>
           </li>
 
           <li class="nav__list-item">
-            <a class="nav__link" href="#">Contact</a>
+            <a class="nav__link" href="#footer">Contact</a>
           </li>
         </ul>
 
@@ -370,7 +370,7 @@
       </ul>
     </section>
 
-    <section class="section-feature">
+    <section id="feature" class="section-feature">
       <div class="section-feature__left">
         <img
           class="section-feature__image"
@@ -437,7 +437,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer id="footer" class="footer">
       <div class="footer__nav">
         <ul class="footer__list">
           <li class="footer__list-item">
@@ -445,11 +445,11 @@
           </li>
 
           <li class="footer__list-item">
-            <a class="footer__link" href="#">How it works</a>
+            <a class="footer__link" href="#feature">How it works</a>
           </li>
 
           <li class="footer__list-item">
-            <a class="footer__link" href="#">Contact</a>
+            <a class="footer__link" href="#footer">Contact</a>
           </li>
         </ul>
 
@@ -500,15 +500,21 @@
           <li class="footer__list-item">
             <ul class="footer__list footer__list-social">
               <li class="footer__list-item">
-                <i class="fa-brands fa-facebook-f icon"></i>
+                <a href="https://www.facebook.com/cleversamerr" target="_blank">
+                  <i class="fa-brands fa-facebook-f icon"> </i>
+                </a>
               </li>
 
               <li class="footer__list-item">
-                <i class="fa-brands fa-instagram icon"></i>
+                <a href="https://twitter.com/cleversamerr" target="_blank"
+                  ><i class="fa-brands fa-twitter icon"></i
+                ></a>
               </li>
 
               <li class="footer__list-item">
-                <i class="fa-brands fa-youtube icon"></i>
+                <a href="https://github.com/cleversamerr" target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
               </li>
             </ul>
           </li>
